<resources>
    <string name="app_name">ConJob</string>
    <string name="app">ConJob</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="empty">Trống</string>
    <string name="Create">Tạo</string>

    <!-- Toast -->
    <string name="toast_login">Login</string>
    <string name="toast_forgot_password">To Forgot Password Screen</string>
    <string name="toast_google_login">Google Login</string>
    <string name="toast_facebook_login">Facebook Login</string>
    <string name="toast_matching_profile">Profile</string>
    <string name="toast_matching_interact">Interact</string>
    <string name="toast_matching_comment">Comment</string>
    <string name="toast_matching_share">Share</string>
    <string name="toast_matching_search">Search</string>
    <string name="toast_matching_accept">Accept</string>
    <string name="toast_matching_skip">Skip</string>
    <string name="toast_post_detail_more">More</string>
    <string name="toast_settings">Settings</string>
    <string name="toast_avatar">Change Avatar</string>
    <string name="toast_edit_profile">Edit Profile</string>
    <string name="toast_post_job_details">Show Job Details</string>

    <!-- Hint Text -->
    <string name="hint_email">Enter your Email</string>
    <string name="hint_address">Enter your Address</string>
    <string name="hint_first_name">Enter your First name</string>
    <string name="hint_last_name">Enter your Last name</string>
    <string name="hint_password">Enter your Password</string>
    <string name="hint_phone">Enter your Phone</string>
    <string name="hint_birthday">yyyy/MM/dd</string>
    <string name="hint_floating_title">Tiêu đề</string>
    <string name="hint_floating_job_title">Tiêu đề<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_caption">Nội dung<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_job_description">Mô tả công việc<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_budget">Chi phí<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_job_type">Loại công việc<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_location">Nơi làm việc<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_quantity">Số lượng ứng viên<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_expired_day">Hạn cuối ứng tuyển<font fgcolor='#C5091F'>*</font></string>
    <string name="hint_floating_first_name">Họ</string>
    <string name="hint_floating_last_name">Tên</string>
    <string name="hint_floating_email">Email</string>
    <string name="hint_floating_address">Đỉa chỉ</string>
    <string name="hint_floating_phone">Số điện thoại</string>

    <!--Description-->
    <string name="description_logo">App logo</string>
    <string name="description_close_icon">Close</string>
    <string name="description_back_arrow_icon">Press this arrow to go back to previous view</string>
    <string name="description_date_picker">Date picker</string>
    <string name="description_login_facebook">Login Facebook</string>
    <string name="description_login_google">Login Google</string>
    <string name="description_avatar">avatar</string>
    <string name="description_cover">cover image</string>
    <string name="description_interact">interact</string>
    <string name="description_comment">comment</string>
    <string name="description_share">share</string>
    <string name="description_search">search</string>
    <string name="description_matching_image">image</string>
    <string name="description_matching_accept">Accept</string>
    <string name="description_matching_skip">Skip</string>
    <string name="description_more_vert_icon">more</string>
    <string name="description_video_play_pause">Play/Pause</string>
    <string name="description_settings">settings</string>
    <string name="description_file_preview">Preview</string>

    <!--Onboard-->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_guest"><u>Continue as a guest</u></string>

    <!-- Register -->
    <string name="button_continue">Continue</string>
    <string name="title_register">Register</string>
    <string name="title_register_2">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birth day</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="validate_first_name_null">Please enter your first name</string>
    <string name="validate_first_name">Your first name is invalid</string>
    <string name="validate_last_name_null">Please enter your last name</string>
    <string name="validate_last_name">Your last name is invalid</string>
    <string name="validate_phone_null">Please enter your phone</string>
    <string name="validate_phone">Your phone number is invalid</string>
    <string name="validate_address_null">Please enter your address</string>
    <string name="validate_email_null">Please enter your Email address</string>
    <string name="validate_email">Your email is not correct!</string>
    <string name="validate_password_require">8 or more characters, contains uppercase letters, lowercase letters, numbers, and symbols</string>
    <string name="validate_password_null">Please enter your Password</string>
    <string name="policy"><![CDATA[By clicking Agree & Join, you agree to ConJob\'s User Agreement, Policy and ]]> <a>Cookie Policy.</a> </string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="gender_other">Khác</string>
    <string name="register_success">Register success!</string>

    <!-- Login -->
    <string name="title_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don’t have an account? </string>
    <string name="register_now">Register Now</string>
    <string name="or_login_with">Or Login with</string>
    <string name="validate_login">Your email don\'t exist or your password is not correct!</string>

    <!--Forgot Password-->
    <string name="send_code">Send Code</string>
    <string name="forgot_password_detail">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>

    <!--Bottom Tab Bar-->
    <string name="tab_home">Home</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_post">Post</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_profile">Profile</string>

    <!--Matching-->
    <string name="item_matching_user_name">"@"%1$s</string>
    <string name="item_matching_content">%1$s</string>
    <string name="item_matching_total_interact">100</string>
    <string name="item_matching_total_comment">245</string>
    <string name="item_matching_total_shared">120</string>
    <string name="matching_accept">Lướt qua phải để tuyển dụng</string>
    <string name="matching_skip">Lướt qua trái để bỏ qua</string>
    <string name="matching_post_empty">Không có bài đăng nào :(</string>
    <string name="matching_post_refresh">Làm mới</string>
    <string name="matching_post_loading">Đang tìm kiếm…</string>

    <!--Post Details-->
    <string name="post_detail_create_date">Ngày đăng: %1$s</string>
    <string name="post_detail_content">Hello mọi người, đây là trang tuyển dụng của công ty mình. Mọi người thấy hứng thú thì apply vào công ty mình nhé! ^^</string>
    <string name="post_detail_job_title"><b>Tên job:</b></string>
    <string name="post_detail_job">Chạy bộ 12km</string>
    <string name="post_detail_time_title"><b>Hạn ứng tuyển:</b></string>
    <string name="post_detail_time">08h30 – 09h00, 24/5/2024</string>
    <string name="post_detail_quantity_title"><b>Số lượng yêu cầu:</b></string>
    <string name="post_detail_quantity">12</string>
    <string name="post_detail_description_title"><b>Mô tả:</b></string>
    <string name="post_detail_description">Xây dựng trang web trong 2 tháng</string>
    <string name="post_detail_budget_title"><b>Kinh phí:</b></string>
    <string name="post_detail_budget">1000000</string>
    <string name="post_detail_location_title"><b>Địa điểm:</b></string>
    <string name="post_detail_location">Không xác định</string>
    <string name="button_apply">Ứng tuyển</string>
    <string name="button_skip">Bỏ qua</string>

    <!--Profile-->
    <string name="user_name">%1$s %2$s</string>
    <string name="profile_phone_number"><b>Số điện thoại: </b> ***********</string>
    <string name="profile_date_of_birth"><b>Ngày sinh: </b> ***********</string>
    <string name="profile_address"><b>Địa chỉ: </b> ***********</string>
    <string name="profile_gender"><b>Giới tính: </b> *****</string>
    <string name="profile_email"><b>Email: </b> ***********</string>
    <string name="profile_phone_number_data"><![CDATA[<b>Số điện thoại: </b> %1$s]]></string>
    <string name="profile_date_of_birth_data"><![CDATA[<b>Ngày sinh: </b> %1$s]]></string>
    <string name="profile_address_data"><![CDATA[<b>Địa chỉ: </b> %1$s]]></string>
    <string name="profile_gender_data"><![CDATA[<b>Giới tính: </b> %1$s]]></string>
    <string name="profile_email_data"><![CDATA[<b>Email: </b> %1$s]]></string>
    <string name="profile_edit">Chỉnh sửa thông tin cá nhân</string>
    <string name="edit_profile_title"><b>Chỉnh sửa thông tin</b></string>
    <string name="button_edit_confirm">Xác nhận</string>

    <!--Settings-->
    <string name="settings_title"><b>Cài đặt</b></string>
    <string name="logout">Đăng xuất</string>

    <!--Publish Post-->
    <string name="publish_post_title">Tạo bài viết</string>
    <string name="publish_post">Đăng</string>
    <string name="publish_post_choose_file_hint">Bấm vào đây để chọn ảnh hoặc video<font fgcolor='#C5091F'>*</font></string>
    <string name="select_job">Chọn công việc</string>
    <string name="list_job">Danh sách công việc</string>

    <!--Create Job-->
    <string name="create_job_title">Tạo công việc</string>
    <string name="job_title">%1$s</string>
    <string name="job_type">%1$s</string>
    <string name="job_location">%1$s</string>
    <string name="job_applications">%1$d/%2$d</string>
    <string name="job_type_default">--Loại công việc--<font fgcolor='#C5091F'>*</font></string>

</resources>