<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewJob"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_12dp"
    android:backgroundTint="@color/gray50">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_12dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvJobType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_type"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_location"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/tvJobType"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvApplicants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_applications"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgDetails"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgDetails"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_48dp"
            android:src="@drawable/ic_details"
            android:contentDescription="@string/post_detail_job"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
