<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imgBtnBackArrow"
        android:layout_width="@dimen/button_48dp"
        android:layout_height="@dimen/button_48dp"
        android:layout_margin="@dimen/margin_4dp"
        android:background="@null"
        android:contentDescription="@string/description_back_arrow_icon"
        android:padding="@dimen/icon_padding_10dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/title_login"
        android:textColor="@color/red700"
        android:textSize="@dimen/fontSize_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBtnBackArrow" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSize_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        app:boxStrokeColor="@color/gray"
        app:boxStrokeWidthFocused="@dimen/text_input_layout_stroke_focused"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@dimen/edt_error_fontSize"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:minHeight="@dimen/edt_min_height_48dp"
            android:paddingHorizontal="@dimen/padding_8dp"
            android:textSize="@dimen/fontSize_small" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSize_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        app:boxStrokeColor="@color/gray"
        app:boxStrokeWidthFocused="@dimen/text_input_layout_stroke_focused"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@dimen/edt_error_fontSize"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="32"
            android:minHeight="@dimen/edt_min_height_48dp"
            android:paddingHorizontal="@dimen/padding_8dp"
            android:textSize="@dimen/fontSize_small" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/fontSize_small"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginValidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPassword" />

    <TextView
        android:id="@+id/tvLoginValidate"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="wrap_content"
        android:text="@string/validate_login"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:textSize="@dimen/fontSize_small"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/custom_button"
        android:enabled="false"
        android:text="@string/button_login"
        android:textSize="@dimen/fontSize_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/red700"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginValidate"
        app:strokeColor="@color/red700" />

    <LinearLayout
        android:id="@+id/linearLayoutDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <View
            android:layout_width="@dimen/layout_width_0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with" />

        <View
            android:layout_width="@dimen/layout_width_0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_weight="1"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoginButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDivider">

        <ImageButton
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_48dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_border"
            android:contentDescription="@string/description_login_facebook"
            android:src="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_48dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_border"
            android:contentDescription="@string/description_login_google"
            android:src="@drawable/ic_google" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_20_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLoginButtons">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textSize="@dimen/fontSize_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="@dimen/padding_0dp"
            android:text="@string/register_now"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/fontSize_medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>