<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imgBtnBackArrow"
        android:layout_width="@dimen/button_48dp"
        android:layout_height="@dimen/button_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/custom_button_border"
        android:contentDescription="@string/description_back_arrow_icon"
        android:padding="@dimen/icon_padding_10dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_44dp"
        android:text="@string/forgot_password"
        android:textColor="@color/red700"
        android:textSize="@dimen/fontSize_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBtnBackArrow" />

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/forgot_password_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSize_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_12dp"
        app:boxStrokeColor="@color/gray"
        app:boxStrokeWidthFocused="@dimen/text_input_layout_stroke_focused"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@dimen/edt_error_fontSize"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:minHeight="@dimen/edt_min_height_48dp"
            android:paddingHorizontal="@dimen/padding_8dp"
            android:textSize="@dimen/fontSize_small" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/custom_button"
        android:enabled="false"
        android:text="@string/send_code"
        android:textSize="@dimen/fontSize_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/red700"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
        app:strokeColor="@color/red700" />

</androidx.constraintlayout.widget.ConstraintLayout>